Adding endpoint to get issues created summary and tests